Fixed almanac overflow bug

--- a/styles/main.css
+++ b/styles/main.css
@@ -176,8 +176,7 @@
 }
 
 .almanacContent {
-    width: 100%;
-    word-wrap: break-word;
+    white-space: nowrap;
 }
 
 #closeAlmanac {
